--- a/exercise_template.ipynb
+++ b/exercise_template.ipynb
@@ -11,7 +11,7 @@
             "\n",
             "\n",
             "\n",
-            "**IMPORTANT**: This notebook will be graded every time you save the notebook. **After saving the notebook, please refresh the window to see the feedback appended at the end of the notebook. Do not modify any of the functions names that will be graded.** \n",
+            "**IMPORTANT: This notebook will be graded every time you save the notebook. After saving the notebook, wait 1 second before refreshing the window to see the feedback appended at the end of the notebook. Do not modify any of the functions names that will be graded.** \n",
             "\n",
             "## Tasks\n",
             "\n",
@@ -44,7 +44,13 @@
             "\n",
             "The formula for the ReLu function is given by the following Equation:\n",
             "\n",
-            "$ReLu(x) = max(0,x)$\n"
+            "$ReLu(x) = max(0,x)$\n",
+            "\n",
+            "\n",
+            "ReLu exercises:\n",
+            "\n",
+            "- Exercise1: Implement the relu function for single value.\n",
+            "- Exercise2: Implement the relu function for $k$ samples and $n$ neurons.\n"
          ]
       },
       {
@@ -81,6 +87,7 @@
             "def relu_function_layer(x):\n",
             "    \"\"\"\n",
             "    Implement the ReLu function for an array.\n",
+            "    HINT: there are multiple ways to achieve it using numpy.\n",
             "    x: a numpy array of floats\n",
             "    return: a numpy array of floats\n",
             "    \"\"\"\n",
@@ -107,12 +114,12 @@
             "\n",
             ">$\\sigma(z_i) = \\frac{e^{z_i}}{\\sum_{j=1}^{N} e^{z_j}}$\n",
             "\n",
-            "where $z_i$ is the logit of layer $i$, $z_j$ is the logit of layer $j$ and $e$ is euler's number. Since the softmax function converts all logits into probabilities, the sum is one: \n",
+            "where $z_i$ is the logit of layer $i$, $z_j$ is the logit of layer $j$ and $e$ is euler's number. Since the softmax function converts all logits into probabilities, the sum of the output of all neurons $n$ add to one: \n",
             "\n",
-            "> $\\sum_j \\sigma(z_{j}) = 1$.\n",
+            "> $\\sum_{j}^{n} \\sigma(z_{j}) = 1$.\n",
             "\n",
             "\n",
-            "In the following task, you will calculate the output of each layer independently to understand how a neuron works. Then, you will calculate the probability for each neuron. Finally, you will use the numpy library to perform the calculation for all neurons in parallel.\n",
+            "In the following exercise, you will calculate the output of each neuron independently to understand how a neuron works. Then, you will calculate the logit for each neuron. Finally, you will use the numpy library to implement the softmax for all neurons in parallel.\n",
             "\n"
          ]
       },
@@ -125,14 +132,14 @@
             "# Exercise 3\n",
             "def calculate_neuron_logit(x, w, b):\n",
             "    \"\"\"\n",
-            "    Calculate the logit of a neuron by multiplying two vectors and summing the bias.\n",
+            "    Calculate the logit of a neuron for a single sample by multiplying two vectors and summing the bias.\n",
             "    x: input vector\n",
-            "    w: weight matrix\n",
-            "    b: bias vector\n",
-            "    return: a floating point number.\n",
+            "    w: weight vector\n",
+            "    b: floating-point number bias\n",
+            "    return: a floating-point number.\n",
             "    \"\"\"\n",
             "    # Your code here\n",
-            "    logit = np.dot(x,w) + b\n",
+            "    logit = np.dot(x,w)\n",
             "    return logit\n",
             "\n",
             "# Generate a dummy input with 10 features.\n",
@@ -142,14 +149,15 @@
             "# Randomly initialize the bias.\n",
             "b = np.random.rand(1)\n",
             "\n",
-            "logit = calculate_neuron_logit(x, w, b)"
+            "logit = calculate_neuron_logit(x, w, b)\n",
+            "print(logit)"
          ]
       },
       {
          "cell_type": "markdown",
          "metadata": {},
          "source": [
-            "Now that you have calculated the logit of a single neuron, it is time to process al neurons in parallel. A neural network process data in batches, meaning that $k$ samples are processed to the network at the same time. If the samples has $f$ features, the input is really a matrix with $k$ rows and $f$ columns. Since the input is a matrix, we shall refer to it as $\\mathbf{X}$. We can get the output of a neuron by multiplying $\\mathbf{X}$ by its weight vector $\\mathbf{w}$. \n",
+            "Now that you have calculated the logit of a single neuron, it is time to process all neurons in parallel. A neural network process data in batches, meaning that $k$ samples are processed to the network at the same time. If the samples has $f$ features, the input is really a matrix with $k$ rows and $f$ columns. Since the input is a matrix, we shall refer to it as $\\mathbf{X}$. We can get the output of a neuron by multiplying $\\mathbf{X}$ by its weight vector $\\mathbf{w}$. \n",
             "\n",
             "Nonetheless, there is a better approach. Imagine we have a weight matrix $\\mathbf{W}$ that has all the weights of all neurons in a layer. One dimension would be the number of neurons $n$ and the other would be the number of input features $f$. We could calculate the output of all neurons for all samples with the dot product:\n",
             "\n",
@@ -167,27 +175,29 @@
          "outputs": [],
          "source": [
             "# Exercise 4\n",
-            "def calculate_layer_logit(x, w, b):\n",
+            "def calculate_logits_layer(x, w, b):\n",
             "    \"\"\"\n",
             "    Calculate the logits of all neurons in parallel.\n",
-            "    HINT: USE THE DOT PRODUCT.\n",
+            "    HINT: USE MATRIX MULTIPLICATION IN NUMPY.\n",
             "    x: input matrix\n",
             "    w: weight matrix\n",
             "    b: bias vector\n",
-            "    return: a list or numpy array of logits.\n",
+            "    return: a numpy array of logits.\n",
             "    \"\"\"\n",
             "    # Your code here\n",
             "    o = 0\n",
             "    return o\n",
             "\n",
-            "# Generate a dummy input with 32 samples and 10 features.\n",
-            "X = np.random.uniform(low=-1.0, high=1.0, size=(32,10))\n",
-            "# Randomly initialize the weight for 10 features and 8 neurons.\n",
-            "W = np.random.uniform(low=-1.0, high=1.0, size=(10, 8))\n",
-            "# Randomly initialize the bias for 8 neuroons.\n",
-            "B = np.random.uniform(low=-1.0, high=1.0, size=8)\n",
+            "# Generate a dummy input with 3 samples and 8 features.\n",
+            "X = np.random.uniform(low=-1.0, high=1.0, size=(3,8))\n",
+            "# Randomly initialize the weight for 8 features and 4 neurons.\n",
+            "W = np.random.uniform(low=-1.0, high=1.0, size=(8, 4))\n",
+            "# Randomly initialize the bias for 4 neurons.\n",
+            "B = np.random.uniform(low=-1.0, high=1.0, size=4)\n",
             "\n",
-            "logits = calculate_layer_logit(X, W, B)"
+            "logits = calculate_logits_layer(X, W, B)\n",
+            "print(logits.shape) # Expected shape is (3, 4)\n",
+            "print(logits)"
          ]
       },
       {
@@ -199,13 +209,13 @@
             "# Exercise 5\n",
             "def softmax_layer(x, w, b):\n",
             "    \"\"\"\n",
-            "    Calculate the probability of neuron using the softmax function.\n",
-            "    HINT: You can use exp() available in both the math library and in numpy.\n",
+            "    Calculate the probability for each neuron using the softmax function.\n",
+            "    HINT: You can use exp() available in numpy.\n",
             "    x: input matrix\n",
             "    w: weight matrix\n",
             "    b: bias vector\n",
             "    \"\"\"\n",
-            "    logits = calculate_layer_logit(x, w, b)\n",
+            "    logits = calculate_logits_layer(x, w, b)\n",
             "\n",
             "    probabilities = logits # Your code here\n",
             "    \n",
@@ -214,6 +224,7 @@
             "\n",
             "\n",
             "probabilities = softmax_layer(X, W, B)\n",
+            "print(probabilities)\n",
             "\n"
          ]
       },
@@ -223,14 +234,13 @@
          "source": [
             "# Task 3: Implement a neural network\n",
             "\n",
-            "The neural network must have the following architecture:\n",
+            "For this task, you will create a neural network using the functions you have implemented so far. The neural network must have the following architecture:\n",
             "\n",
             "1. Dense layer with ReLu activation function with 32 neurons.\n",
             "2. Dense layer with Relu activation function with 32 neurons.\n",
             "3. Dense layer with softmax activation function with 4 neurons.\n",
             "\n",
-            "\n",
-            "The number of features is 8."
+            "The weights of the neural network should be randomly initialized using a normal distribution. Take into consideration that the number of features per sample is 8."
          ]
       },
       {
@@ -242,7 +252,8 @@
             "# Exercise 6\n",
             "def weight_initialization(f, n1, n2, n3):\n",
             "    \"\"\"\n",
-            "    Initialize the weights of a neural network with 3 layers.\n",
+            "    Randomly initialize the weights of a neural network \n",
+            "    with 3 layers using a normal distribution.\n",
             "    HINT: Use numpy to generate random matrices.\n",
             "    f: number of features\n",
             "    n1: number of neurons in the first hidden layer\n",
@@ -251,14 +262,15 @@
             "    return: a tuple of weight matrices\n",
             "    \"\"\"\n",
             "    # Your code here\n",
-            "    w1 = 0\n",
-            "    w2 = 0\n",
+            "    w1 = np.random.normal(size=(10,8))\n",
+            "    w2 = np.random.normal(size=(10,8))\n",
             "    w3 = 0\n",
             "    b1 = 0\n",
             "    b2 = 0\n",
             "    b3 = 0\n",
             "    return w1, w2, w3, b1, b2, b3\n",
             "\n",
+            "# Example of weight initialization for layers with 10, 8, 6 and 4 neurons, respectively.\n",
             "w1, w2, w3, b1, b2, b3 = weight_initialization(10, 8, 6, 4)\n",
             "print(w1.shape) # Expected output: (10, 8)\n",
             "print(w2.shape) # Expected output: (8, 6)\n",
@@ -290,7 +302,7 @@
             "    x: input matrix\n",
             "    wn: weight matrix of layer n.\n",
             "    bn: bias vector of layer n.\n",
-            "    return: output of first layer, output of second layer, output of the network.\n",
+            "    return: tuple of numpy arrays for output of first layer, output of second layer, output of the network.\n",
             "    \"\"\"\n",
             "    # Your code here\n",
             "\n",
