Notebook for student.

--- a/exercise_template.ipynb
+++ b/exercise_template.ipynb
@@ -7,7 +7,7 @@
             "# My first Neural Network in Python\n",
             "\n",
             "\n",
-            "In this Lab, you will program your first neural network using python and the numpy library for array operations. The difficulty will be increasing until the last exercise, where you will use all the functions you implemented to initialize your first neural network. In following labs, you will learn how to train a neural network.\n",
+            "In this Lab, you will program your first neural network using python and the numpy library for array operations. In the last exercise, you will use all the functions you implemented to initialize your first neural network and make a forward propagation. In following labs, you will learn how to train a neural network.\n",
             "\n",
             "\n",
             "\n",
@@ -15,20 +15,10 @@
             "\n",
             "## Tasks\n",
             "\n",
-            "- Implement the ReLu activation function.\n",
+            "- Implement the ReLu activation function for a layer.\n",
             "- Implement a softmax layer.\n",
             "- Initialize a 3 layer neural network.\n",
-            "- Implement forward propagation through a neural network."
-         ]
-      },
-      {
-         "cell_type": "code",
-         "execution_count": null,
-         "metadata": {},
-         "outputs": [],
-         "source": [
-            "import numpy as np\n",
-            "import math"
+            "- Implement forward propagation through a neural network.\n"
          ]
       },
       {
@@ -37,15 +27,15 @@
          "source": [
             "# Task 1: Implement the ReLu activation function\n",
             "\n",
-            "The Rectifier Linear (ReLU) is a function used as an activation function for neurons for its non-linearity. The function is applied per each neuron to calculate its output. The following figure shows that ReLu returns a 0 for negative values of x.\n",
+            "\n",
+            "\n",
+            "The Rectifier Linear (ReLU) is a function used as an activation function for neurons for its non-linearity. The function is applied per neuron independently. The following figure shows that ReLu returns a 0 for all negative values of x.\n",
             "\n",
             "\n",
             "![ReLu activation function](./images/relu.png)\n",
             "\n",
-            "The formula for the ReLu function is given by the following Equation:\n",
             "\n",
-            "$ReLu(x) = max(0,x)$\n",
-            "\n",
+            "Your first task is to implement the ReLu activation function for a single value. Then, you will follow the same strategy for an array of values, which represent the outputs of $n$ neurons for $k$ samples of data.\n",
             "\n",
             "ReLu exercises:\n",
             "\n",
@@ -59,22 +49,34 @@
          "metadata": {},
          "outputs": [],
          "source": [
+            "import numpy as np\n",
+            "\n",
             "# Exercise 1\n",
             "def relu_function(x):\n",
             "    \"\"\"\n",
             "    Implement the ReLu function for a scalar.\n",
+            "    HINT: there is a python built-in function that does exactly what the\n",
+            "    figure shows when one of the parameters is 0.\n",
             "    x: a float\n",
             "    return: a float\n",
             "    \"\"\"\n",
             "    # Your code here\n",
-            "    o = 0 \n",
+            "    o = 0\n",
             "    return o\n",
+            "\n",
             "\n",
             "\n",
             "output = relu_function(5)\n",
             "print(output) # Expected output: 5\n",
             "output = relu_function(-2)\n",
             "print(output) # Expected output: 0"
+         ]
+      },
+      {
+         "cell_type": "markdown",
+         "metadata": {},
+         "source": [
+            "Now that you understand that the ReLu function is really a max function, you have to implement it for a layer. The strategy is the same as before: perform a max operation between of each element in an array and 0. There are multiple ways to achieve it. Although you could use a loop, there is function in the *numpy* library that can produce the expected result in a single line of code."
          ]
       },
       {
@@ -92,8 +94,9 @@
             "    return: a numpy array of floats\n",
             "    \"\"\"\n",
             "    # Your code here\n",
-            "    o = np.maximum(x,0) \n",
+            "    o = 0\n",
             "    return o\n",
+            "\n",
             "\n",
             "x = np.array([[5, -2, 3, 4, -5], [-1, 2, 3, 4, 5]])\n",
             "output = relu_function_layer(x)\n",
@@ -106,20 +109,20 @@
          "source": [
             "# Task 2: Implement a softmax layer.\n",
             "\n",
-            "The softmax layer is a dense layer that applies the softmax function to convert the logits into probabilities. The logits are the raw predictions of the neurons. The prediction of neuron $i$ is calculated using the following equation:\n",
+            "The softmax layer is a dense layer that uses the softmax function to convert the logits into probabilities. The logits are the raw predictions of the neurons. The prediction of neuron $i$ is calculated using the following equation:\n",
             "\n",
             ">$z_i=\\mathbf{x} \\cdot \\mathbf{w}_i + b_i$,\n",
             "\n",
-            "where $\\mathbf{x}$ is the input vector of the layer, $\\mathbf{w}$ is the weights of the neuron and $b$ is a scalar known as the bias. In contrast with the ReLu activation function that is applied to the output of only one neuron ReLu($\\mathbf{x} \\cdot \\mathbf{w}_i + b_i$), the softmax function takes into consideration the outputs of other layer to assign a probability to each neuron using the following equation:\n",
+            "where $\\mathbf{x}$ is the input vector of the layer for a single sample, $\\mathbf{w}_i$ is the weights of the neuron $i$ and $b_i$ is a scalar known as the bias. In contrast to the ReLu activation function that is applied to each neuron independently, the softmax function takes into consideration the outputs of all neurons in a layer to assign a probability to each neuron using the following equation\n",
             "\n",
-            ">$\\sigma(z_i) = \\frac{e^{z_i}}{\\sum_{j=1}^{N} e^{z_j}}$\n",
+            ">$\\sigma(z_i) = \\frac{e^{z_i}}{\\sum_{j=1}^{N} e^{z_j}}$,\n",
             "\n",
-            "where $z_i$ is the logit of layer $i$, $z_j$ is the logit of layer $j$ and $e$ is euler's number. Since the softmax function converts all logits into probabilities, the sum of the output of all neurons $n$ add to one: \n",
+            "where $z_i$ is the logit of neuron $i$, $z_j$ is the logit of neuron $j$ and $e$ is euler's number. Since the softmax function converts all logits into probabilities, their sum adds to one: \n",
             "\n",
             "> $\\sum_{j}^{n} \\sigma(z_{j}) = 1$.\n",
             "\n",
             "\n",
-            "In the following exercise, you will calculate the output of each neuron independently to understand how a neuron works. Then, you will calculate the logit for each neuron. Finally, you will use the numpy library to implement the softmax for all neurons in parallel.\n",
+            "In the following exercise, you will calculate the output of each neuron independently to understand how a neuron works. Then, you will calculate the logits for all neurons in a layer. Finally, you will use the numpy library to implement the softmax function.\n",
             "\n"
          ]
       },
@@ -139,7 +142,7 @@
             "    return: a floating-point number.\n",
             "    \"\"\"\n",
             "    # Your code here\n",
-            "    logit = np.dot(x,w)\n",
+            "    logit = 0\n",
             "    return logit\n",
             "\n",
             "# Generate a dummy input with 10 features.\n",
@@ -157,13 +160,17 @@
          "cell_type": "markdown",
          "metadata": {},
          "source": [
-            "Now that you have calculated the logit of a single neuron, it is time to process all neurons in parallel. A neural network process data in batches, meaning that $k$ samples are processed to the network at the same time. If the samples has $f$ features, the input is really a matrix with $k$ rows and $f$ columns. Since the input is a matrix, we shall refer to it as $\\mathbf{X}$. We can get the output of a neuron by multiplying $\\mathbf{X}$ by its weight vector $\\mathbf{w}$. \n",
+            "Now that you have learned to calculate the logit of a neuron for a single sample. You can move on to learning how to process multiple samples in parallel. \n",
             "\n",
-            "Nonetheless, there is a better approach. Imagine we have a weight matrix $\\mathbf{W}$ that has all the weights of all neurons in a layer. One dimension would be the number of neurons $n$ and the other would be the number of input features $f$. We could calculate the output of all neurons for all samples with the dot product:\n",
+            "A neural network receives $k$ samples the same time and generates an output per sample. If the samples have $f$ features, the input of the network is really a matrix with $k$ rows and $f$ columns. Since the input is a matrix, we shall refer to it as $\\mathbf{X}$. We can get the output of a neuron by multiplying $\\mathbf{X}$ by its weight vector $\\mathbf{w}$. \n",
             "\n",
-            "$\\mathbf{z} = \\mathbf{X}\\cdot\\mathbf{W} + \\mathbf{b}$\n",
+            "$z_{i} = \\mathbf{X} \\mathbf{w}_i + b_i$\n",
             "\n",
-            "Since the dot product requires that the number of columns in $\\mathbf{X}$ be equal to the number of rows in $\\mathbf{W}$, the matrix $\\mathbf{W}$ must have $f$ rows and $n$ columns. In other words, all weights associated with neuron $i$ will be in column $i$. \n",
+            "Nonetheless, there is a better approach. Imagine we have a weight matrix $\\mathbf{W}$ that has all the weights of all neurons in a layer. One dimension would be the number of neurons $n$ and the other would be the number of input features $f$ (number of weights in each neuron). We could calculate the output of all neurons for all samples with by multiplying the input matrix $\\mathbf{X}$ by the weight matrix $\\mathbf{W}$:\n",
+            "\n",
+            "$\\mathbf{Z} = \\mathbf{X} \\mathbf{W} + \\mathbf{b}$\n",
+            "\n",
+            "Since the multiplication requires that the number of columns in matrix $\\mathbf{X}$ be equal to the number of rows in matrix $\\mathbf{W}$, the matrix $\\mathbf{W}$ must have $f$ rows and $n$ columns. In other words, all weights associated with neuron $i$ will be in column $i$. \n",
             "\n",
             "  "
          ]
@@ -178,7 +185,7 @@
             "def calculate_logits_layer(x, w, b):\n",
             "    \"\"\"\n",
             "    Calculate the logits of all neurons in parallel.\n",
-            "    HINT: USE MATRIX MULTIPLICATION IN NUMPY.\n",
+            "    HINT: USE THE MATRIX MULTIPLICATION IMPLEMENTED IN NUMPY.\n",
             "    x: input matrix\n",
             "    w: weight matrix\n",
             "    b: bias vector\n",
@@ -209,8 +216,9 @@
             "# Exercise 5\n",
             "def softmax_layer(x, w, b):\n",
             "    \"\"\"\n",
-            "    Calculate the probability for each neuron using the softmax function.\n",
-            "    HINT: You can use exp() available in numpy.\n",
+            "    Implement a softmax layer by calculating the logits of a layer\n",
+            "    and applying the softmax function to the logits.\n",
+            "    HINT: YOU CAN USE exp() AVAILABLE IN NUMPY FOR IMPLEMENTING SOFTMAX.\n",
             "    x: input matrix\n",
             "    w: weight matrix\n",
             "    b: bias vector\n",
@@ -236,11 +244,11 @@
             "\n",
             "For this task, you will create a neural network using the functions you have implemented so far. The neural network must have the following architecture:\n",
             "\n",
-            "1. Dense layer with ReLu activation function with 32 neurons.\n",
-            "2. Dense layer with Relu activation function with 32 neurons.\n",
-            "3. Dense layer with softmax activation function with 4 neurons.\n",
+            "1. Dense layer with **ReLu activation function** with **32 neurons**.\n",
+            "2. Dense layer with **Relu activation function** with **32 neurons**.\n",
+            "3. Dense layer with **softmax activation function** with **4 neurons**.\n",
             "\n",
-            "The weights of the neural network should be randomly initialized using a normal distribution. Take into consideration that the number of features per sample is 8."
+            "The weights of the neural network should be randomly initialized. You can use  the normal distribution as shown in the next function. **Take into consideration that the number of features per sample is 8**."
          ]
       },
       {
@@ -262,8 +270,8 @@
             "    return: a tuple of weight matrices\n",
             "    \"\"\"\n",
             "    # Your code here\n",
-            "    w1 = np.random.normal(size=(10,8))\n",
-            "    w2 = np.random.normal(size=(10,8))\n",
+            "    w1 = np.random.normal(size=(4,4)) #Replace contants with the corresponding variables.\n",
+            "    w2 = 0\n",
             "    w3 = 0\n",
             "    b1 = 0\n",
             "    b2 = 0\n",
@@ -287,7 +295,7 @@
          "cell_type": "markdown",
          "metadata": {},
          "source": [
-            "The process of calculating the output of a neural network is called by several names like fordward propagation and inference. In the following exercise, you will use the functions you implemented for forward propagation. "
+            "The process of calculating the output of a neural network is called by several names like fordward propagation and inference. In the following exercise, you will use the functions you implemented for forward propagation of the specified network architecture. "
          ]
       },
       {
@@ -298,7 +306,7 @@
          "source": [
             "def neural_network(x, w1, b1, w2, b2, w3, b3):\n",
             "    \"\"\"\n",
-            "    Use the functions you implemented to create a neural network with 3 layers and predict the output for x.\n",
+            "    Generate the output for a neural network with 3 layers.\n",
             "    x: input matrix\n",
             "    wn: weight matrix of layer n.\n",
             "    bn: bias vector of layer n.\n",
@@ -306,12 +314,12 @@
             "    \"\"\"\n",
             "    # Your code here\n",
             "\n",
-            "    o1 = 0\n",
-            "    o2 = 0\n",
-            "    probabilities = 0\n",
+            "    o1 = 0 # Output of first layer.\n",
+            "    o2 = 0 # Output of second layer.\n",
+            "    probabilities = 0 # Output of softmax layer.\n",
             "    \n",
             "    \n",
-            "    return probabilities\n",
+            "    return o1, o2, probabilities\n",
             "\n",
             "\n",
             "o1, o2, predictions = neural_network(w1, w2, w3, b1, b2, b3)\n",
